--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "wheel-discord-bot",
   "version": "1.0.0",
   "main": "index.js",
+  "engines": {
+    "node": "18.x"
+  },
   "license": "MIT",
   "scripts": {
     "start": "node index.js"
