--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "dotenv": "^16.0.3",
     "gif-encoder-2": "^1.0.5",
     "gifken": "^3.0.4",
-    "open": "^9.1.0"
+    "open": "^9.1.0",
+    "mongoose": "^7.6.0",
+    "express": "^4.19.2"
   }
 }
